<resources>
    <string name="app_name">Project1</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="phone_number">Phone Number</string>

    <!--Error Messages-->
    <string name="invalid_name">Please enter a valid Name</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_phone">Please enter a valid phone number</string>

    <!--%1$s implies : 1st parameter : expecting a string-->
    <string name="welcome_message">Welcome %1$s!</string>

</resources>